--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project1",
+  "name": "project2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
-    "mongoose": "^8.8.1",
-    "mysql": "^2.18.1"
+    "mongoose": "^8.8.1"
   }
 }
